--- a/random-num-generator/index.html
+++ b/random-num-generator/index.html
@@ -121,7 +121,7 @@
     </div>
 </div>
 
-<script src="number.js"></script>
+<script src="Number.js"></script>
 <script src="random.js"></script>
 <script>
     var rowsBox = document.getElementById("rows");
