--- a/css-editor/index.html
+++ b/css-editor/index.html
@@ -34,10 +34,10 @@
             <h2>Editor</h2>
             <div class="controls clear">
                 <button id="parseCSS" onclick="parseCSS();" title="Parse CSS Sections">
-                    <i class="fas fa-search"></i>
+                    <i class="fas fa-search"></i> Parse
                 </button>
                 <button id="copyCSS" onclick="copyCSS();" title="Copy All Sections">
-                    <i class="fas fa-copy"></i>
+                    <i class="fas fa-copy"></i> Copy
                 </button>
             </div>
         </div>
