--- a/css-editor/index.html
+++ b/css-editor/index.html
@@ -53,6 +53,7 @@
 
 <script src="codemirror/lib/codemirror.js"></script>
 <script src="codemirror/lib/active-line.js"></script>
+<script src="codemirror/lib/comment.js"></script>
 <script src="codemirror/mode/css/css.js"></script>
 
 <script src="scripts/jquery.caret.js"></script>
