--- a/sticky-scrollable-video/video-test.html
+++ b/sticky-scrollable-video/video-test.html
@@ -6,6 +6,7 @@
 <body>
 
 <video src="videos/1400x788_04_ScrollAnimationTechnology_fahrerlebnis_v015.mp4">Sorry, your browser doesn't support embedded videos.</video>
+<video src="videos/Chrome_ImF.ogv">Sorry, your browser doesn't support embedded videos.</video>
 
 </body>
 </html>
