--- a/sticky-scrollable-video/index.html
+++ b/sticky-scrollable-video/index.html
@@ -98,7 +98,7 @@
 
 <script>
     var video = document.querySelector("video");
-    var ssv = new StickyScrollableVideo(video, 250);
+    var ssv = new StickyScrollableVideo(video);
 </script>
 
 </body>
