--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -12,6 +12,7 @@
     var video = document.querySelector("video");
     
     video.addEventListener("click", function () {
+        alert(video);
         video.play();
     });
     
