--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 
-<video src="videos/1400x788_04_ScrollAnimationTechnology_fahrerlebnis_v015.mp4">Sorry, your browser doesn't support embedded videos.</video>
+<video>
+    <source src="videos/1400x788_04_ScrollAnimationTechnology_fahrerlebnis_v015.mp4" type="video/mp4">
+    Sorry, your browser doesn't support embedded videos.
+</video>
 
 <script>
     
