--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -15,8 +15,8 @@
     var video = document.querySelector("video");
     
     video.addEventListener("click", function () {
-        alert(video);
         video.play();
+        alert(video.currentTime);
     });
     
 </script>
