--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -15,7 +15,8 @@
     var video = document.querySelector("video");
     
     video.addEventListener("click", function () {
-        video.play();
+        // video.play();
+        video.currentTime = video.duration / 2;
         alert(video.currentTime);
     });
     
