--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -6,7 +6,10 @@
 <body>
 
 <video>
-    <source src="videos/1400x788_04_ScrollAnimationTechnology_fahrerlebnis_v015.mp4" type="video/mp4">
+    <!-- <source src="videos/1400x788_04_ScrollAnimationTechnology_fahrerlebnis_v015.mp4" type="video/mp4"> -->
+    <source src="videos/sintel-trailer.mp4" type="video/mp4">
+    <!-- <source src="videos/sintel-trailer.ogv" type="video/ogv"> -->
+    <!-- <source src="videos/sintel-trailer.webm" type="video/webm"> -->
     Sorry, your browser doesn't support embedded videos.
 </video>
 
@@ -15,9 +18,11 @@
     var video = document.querySelector("video");
     
     video.addEventListener("click", function () {
-        // video.play();
-        video.currentTime = video.duration / 2;
-        alert(video.currentTime);
+        if (video.paused) {
+            video.play();
+        } else {
+            video.pause();
+        }
     });
     
 </script>
