--- a/sticky-scrollable-video/index.html
+++ b/sticky-scrollable-video/index.html
@@ -77,12 +77,12 @@
     </div>
     
     <div class="section video">
-        <video src="videos/1400x788_04_ScrollAnimationTechnology_fahrerlebnis_v015.mp4">Sorry, your browser doesn't support embedded videos.</video>
+        <video src="videos/fahrerlebnis_kfd_1.mp4">Sorry, your browser doesn't support embedded videos.</video>
         <!-- <video src="videos/Chrome_ImF.ogv">Sorry, your browser doesn't support embedded videos.</video> -->
         <!-- <video src="videos/1000px-Google_Chrome_icon_(September_2014).svg.mp4">Sorry, your browser doesn't support embedded videos.</video> -->
-        <!-- <video src="videos/1000px-Google_Chrome_icon_1_kfd.mp4">Sorry, your browser doesn't support embedded videos.</video> -->
+        <!-- <video src="videos/1000px-Google_Chrome_icon_kfd_1.mp4">Sorry, your browser doesn't support embedded videos.</video> -->
         <!-- <video src="videos/bedroom.mp4">Sorry, your browser doesn't support embedded videos.</video> -->
-        <!-- <video src="videos/bedroom_1kfd.mp4">Sorry, your browser doesn't support embedded videos.</video> -->
+        <!-- <video src="videos/bedroom_kfd_1.mp4">Sorry, your browser doesn't support embedded videos.</video> -->
     </div>
     
     <div class="section magenta">
