--- a/sticky-scrollable-video/index.html
+++ b/sticky-scrollable-video/index.html
@@ -108,6 +108,7 @@
         grandParent  : document.querySelector("main"),
         siblings     : StickyScrollableVideo.getSiblings(document.querySelector(".section.video")),
         pixelsPerSec : 500,
+        afterWidth   : 768,
     };
     ssv = new StickyScrollableVideo(options);
 </script>
