--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -22,7 +22,7 @@
     Sorry, your browser doesn't support embedded videos.
 </video>
 
-<video poster="videos/poster.jpg" preload="metadata" playsinline muted autoplay>
+<video poster="videos/poster.jpg" preload="metadata" playsinline muted>
     <source src="videos/fahrerlebnis_kfd_25.mp4" type="video/mp4">
     <source src="videos/fahrerlebnis_kfd_25.webm" type="video/webm">
     Sorry, your browser doesn't support embedded videos.
