--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<video poster="videos/poster.jpg" preload="metadata" playsinline muted>
+<video poster="videos/poster.jpg" playsinline>
     <source src="videos/fahrerlebnis_kfd_1.mp4" type="video/mp4">
     <source src="videos/fahrerlebnis_kfd_1.webm" type="video/webm">
     Sorry, your browser doesn't support embedded videos.
