--- a/in-view-tracker/video.html
+++ b/in-view-tracker/video.html
@@ -18,13 +18,11 @@
 
 <video poster="videos/poster.jpg" playsinline>
     <source src="videos/fahrerlebnis_kfd_1.mp4" type="video/mp4">
-    <source src="videos/fahrerlebnis_kfd_1.webm" type="video/webm">
     Sorry, your browser doesn't support embedded videos.
 </video>
 
-<video poster="videos/poster.jpg" playsinline autoplay>
+<video poster="videos/poster.jpg" playsinline>
     <source src="videos/fahrerlebnis_kfd_25.mp4" type="video/mp4">
-    <source src="videos/fahrerlebnis_kfd_25.webm" type="video/webm">
     Sorry, your browser doesn't support embedded videos.
 </video>
 
