--- a/html5-video/index.html
+++ b/html5-video/index.html
@@ -20,12 +20,16 @@
             margin: 1em;
             max-width: calc(100% - 2em);
         }
+        .active {
+            background-color: dodgerblue;
+            color: white;
+        }
     </style>
 </head>
 <body>
 
 
-<a href="https://akinuri.github.io/html5-video/">default</a>
+<a class="active" href="https://akinuri.github.io/html5-video/">default</a>
 <a href="https://akinuri.github.io/html5-video/playsinline.html">playsinline</a>
 <a href="https://akinuri.github.io/html5-video/controls.html">controls="true"</a>
 <a href="https://akinuri.github.io/html5-video/autoplay.html">autoplay</a>
