--- a/html5-video/autoplay.html
+++ b/html5-video/autoplay.html
@@ -36,7 +36,7 @@
 <a href="https://akinuri.github.io/html5-video/autoplay-disabled.html">autoplay (disabled)</a>
 
 
-<video poster="videos/poster.jpg" autoplay>
+<video poster="videos/poster.jpg" preload="auto" autoplay>
     <source src="videos/fahrerlebnis_kfd_25.mp4" type="video/mp4">
     Sorry, your browser doesn't support embedded videos.
 </video>
