--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -25,6 +25,7 @@
 <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
     
+    <script src="game.utils.js"></script>
     <script src="game.js"></script>
 </body>
 
