--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -18,6 +18,8 @@
             margin: 0 auto;
             border: 1px solid hsl(0, 0%, 90%);
             box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.05);
+            cursor: none;
+            transform-origin: top;
         }
     </style>
 </head>
@@ -27,6 +29,9 @@
     
     <script src="game.utils.js"></script>
     <script src="game.js"></script>
+    <script>
+        document.querySelector("canvas").style.scale = 1 / devicePixelRatio;
+    </script>
 </body>
 
 </html>
