2d-breakout-js demo

--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -28,6 +28,7 @@
     <canvas id="myCanvas" width="480" height="320"></canvas>
     
     <script src="ball.js"></script>
+    <script src="paddle.js"></script>
     <script src="game.utils.js"></script>
     <script src="game.js"></script>
     <script>
