2d-breakout-js demo

--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -29,6 +29,8 @@
     
     <script src="ball.js"></script>
     <script src="paddle.js"></script>
+    <script src="bricks.js"></script>
+    <script src="brick.js"></script>
     <script src="game.utils.js"></script>
     <script src="game.js"></script>
     <script>
