2d-breakout-js demo

--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -31,6 +31,7 @@
     <script src="paddle.js"></script>
     <script src="bricks.js"></script>
     <script src="brick.js"></script>
+    <script src="screens.js"></script>
     <script src="game.utils.js"></script>
     <script src="game.js"></script>
     <script>
