2d-breakout-js demo

--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <canvas id="myCanvas"></canvas>
     
     <script src="ball.js"></script>
     <script src="paddle.js"></script>
