--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -17,7 +17,6 @@
             margin: 0 auto;
             border: 1px solid hsl(0, 0%, 90%);
             box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.05);
-            cursor: none;
             transform-origin: top;
         }
     </style>
@@ -31,6 +30,7 @@
     <script src="bricks.js"></script>
     <script src="brick.js"></script>
     <script src="screens.js"></script>
+    <script src="collision-monitor.js"></script>
     <script src="game.utils.js"></script>
     <script src="game.js"></script>
     <script>
