--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -25,6 +25,7 @@
 <body>
     <canvas id="myCanvas"></canvas>
     
+    <script src="app.js"></script>
     <script src="ball.js"></script>
     <script src="paddle.js"></script>
     <script src="bricks.js"></script>
