2d-breakout-js demo

--- a/2d-breakout-js/index.html
+++ b/2d-breakout-js/index.html
@@ -28,6 +28,7 @@
     <script src="app.js"></script>
     <script src="ball.js"></script>
     <script src="paddle.js"></script>
+    <script src="spikes.js"></script>
     <script src="bricks.js"></script>
     <script src="brick.js"></script>
     <script src="screens.js"></script>
