--- a/custom-scrollbar/index.html
+++ b/custom-scrollbar/index.html
@@ -6,35 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        let scripts2load = {
-            "https://raw.githubusercontent.com/akinuri/js-lib/master/html/qs.js" : {
-                import : ["qs", "qsa"],
+        let ScriptLoader = {
+            scripts : {
+                "https://raw.githubusercontent.com/akinuri/js-lib/master/html/qs.js" : {
+                    import : ["qs", "qsa"],
+                },
+                "https://raw.githubusercontent.com/akinuri/js-lib/master/event/on.js" : {
+                    import : ["on"],
+                },
+                "https://raw.githubusercontent.com/alexei/sprintf.js/master/dist/sprintf.min.js" : {
+                    import : ["sprintf"],
+                },
             },
-            "https://raw.githubusercontent.com/akinuri/js-lib/master/event/on.js" : {
-                import : ["on"],
+            load : function () {
+                window.addEventListener("ScriptLoaded", () => {
+                    if (ScriptLoader.areAllScriptsLoaded()) {
+                        window.dispatchEvent(new CustomEvent("AllScriptsLoaded"));
+                    }
+                });
+                for (let scriptURL in ScriptLoader.scripts) {
+                    let config = ScriptLoader.scripts[scriptURL];
+                    if (config.loaded != true) {
+                        fetch(scriptURL, {cache: "no-cache"})
+                            .then((response) => response.text())
+                            .then((text) => {
+                                eval(text);
+                                config.loaded = true;
+                                config.import.forEach(item => {
+                                    window[item] = eval(item);
+                                });
+                                window.dispatchEvent(new CustomEvent("ScriptLoaded", {detail: {src: scriptURL}}));
+                            });
+                    }
+                }
             },
-            "https://raw.githubusercontent.com/alexei/sprintf.js/master/dist/sprintf.min.js" : {
-                import : ["sprintf"],
+            areAllScriptsLoaded : function () {
+                return Object.values(ScriptLoader.scripts).every(config => config.loaded);
             },
         };
-        for (let script in scripts2load) {
-            let config = scripts2load[script];
-            fetch(script, {cache: "no-cache"})
-                .then((response) => response.text())
-                .then((text) => {
-                    eval(text);
-                    config.loaded = true;
-                    config.import.forEach(imp => {
-                        window[imp] = eval(imp);
-                    });
-                    window.dispatchEvent(new CustomEvent("ScriptLoaded", {detail: {src: script}}));
-                });
-        }
-        window.addEventListener("ScriptLoaded", () => {
-            if (Object.values(scripts2load).every(config => config.loaded)) {
-                window.dispatchEvent(new Event("AllScriptsLoaded"));
-            }
-        });
+        ScriptLoader.load();
     </script>
 </head>
 <body class="bg-slate-100">
@@ -149,14 +159,53 @@
                 </td>
                 <td>
                     <input
+                        type="number"
+                        id="track-background-alpha-input"
+                        step="0.1"
+                        min="0"
+                        max="1"
+                        value="1"
+                        title="alpha"
+                        class="w-[60px] mr-1 border rounded px-1 bg-slate-50 text-slate-600 placeholder:text-slate-300 hover:border-blue-300 hover:placeholder:text-slate-400/60 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-300 focus:placeholder:text-slate-400/70"
+                        >
+                    <input
+                        type="range"
+                        id="track-background-alpha-range"
+                        step="0.1"
+                        min="0"
+                        max="1"
+                        value="1"
+                        title="alpha"
+                        list="range-markers-alpha"
+                        class="w-[130px]"
+                        >
+                    <datalist id="range-markers-alpha">
+                        <option>0.0</option>
+                        <option>0.1</option>
+                        <option>0.2</option>
+                        <option>0.3</option>
+                        <option>0.4</option>
+                        <option>0.5</option>
+                        <option>0.6</option>
+                        <option>0.7</option>
+                        <option>0.8</option>
+                        <option>0.9</option>
+                        <option>1.0</option>
+                    </datalist>
+                </td>
+            </tr>
+            <!-- <tr>
+                <td></td>
+                <td colspan="2" class="pb-2">
+                    <input
                         type="text"
                         id="track-background-text"
                         value="hsla(0, 0%, 95%, 0.9)"
-                        class="border rounded px-1 bg-slate-50 text-slate-600 placeholder:text-slate-300 hover:border-blue-300 hover:placeholder:text-slate-400/60 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-300 focus:placeholder:text-slate-400/70 read-only:opacity-50"
+                        class="w-full border rounded px-1 bg-slate-50 text-slate-600 placeholder:text-slate-300 hover:border-blue-300 hover:placeholder:text-slate-400/60 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-300 focus:placeholder:text-slate-400/70 read-only:opacity-75"
                         readonly
                         >
                 </td>
-            </tr>
+            </tr> -->
             <tr>
                 <td>Radius</td>
                 <td>
