--- a/device-info/index.html
+++ b/device-info/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Screen Info</title>
+    <title>Device Info</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
         body {
-            font-family: monospace, sans-serif;
-            font-size: 15px;
+            font-family: sans-serif;
+            font-size: 14px;
+            margin: 0;
+            padding: 1em;
         }
         table {
             border-collapse: collapse;
