--- a/device-info/index.html
+++ b/device-info/index.html
@@ -42,6 +42,8 @@
             "screen"                    : "header",
             "screen.width"              : screen.width,
             "screen.height"             : screen.height,
+            "screen.availWidth"         : screen.availWidth,
+            "screen.availHeight"        : screen.availHeight,
             "screen.orientation.type"   : screen.orientation.type,
             
             "navigator"                 : "header",
@@ -51,6 +53,7 @@
             "navigator.languages"       : navigator.languages.join(", "),
             "navigator.platform"        : navigator.platform,
             "navigator.userAgent"       : navigator.userAgent,
+            "navigator.userAgentData.platform" : navigator.userAgentData.platform,
         }
     }
     function printInfo() {
