--- a/custom-scrollbar/index.html
+++ b/custom-scrollbar/index.html
@@ -270,7 +270,7 @@
                     <input
                         type="color"
                         id="corner-background-input"
-                        value="#000000"
+                        value="#ffffff"
                         class="w-20 border rounded px-1 bg-slate-50 text-slate-600 placeholder:text-slate-300 hover:border-blue-300 hover:placeholder:text-slate-400/60 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-300 focus:placeholder:text-slate-400/70"
                         >
                 </td>
@@ -281,7 +281,7 @@
                         step="0.1"
                         min="0"
                         max="1"
-                        value="0"
+                        value="1"
                         title="alpha"
                         class="w-[60px] mr-1 border rounded px-1 bg-slate-50 text-slate-600 placeholder:text-slate-300 hover:border-blue-300 hover:placeholder:text-slate-400/60 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-300 focus:placeholder:text-slate-400/70"
                         >
@@ -291,7 +291,7 @@
                         step="0.1"
                         min="0"
                         max="1"
-                        value="0"
+                        value="1"
                         title="alpha"
                         list="range-markers-alpha"
                         class="w-[100px] sm:w-[130px]"
