--- a/custom-scrollbar/index.html
+++ b/custom-scrollbar/index.html
@@ -101,20 +101,9 @@
                                     min="0"
                                     max="32"
                                     value="10"
-                                    list="range-markers-4x"
+                                    data-list-step="2"
                                     class="w-[150px] sm:w-[200px]"
                                     >
-                                <datalist id="range-markers-4x">
-                                    <option value="0"></option>
-                                    <option value="4"></option>
-                                    <option value="8"></option>
-                                    <option value="12"></option>
-                                    <option value="16"></option>
-                                    <option value="20"></option>
-                                    <option value="24"></option>
-                                    <option value="28"></option>
-                                    <option value="32"></option>
-                                </datalist>
                             </td>
                         </tr>
                         <tr>
@@ -139,7 +128,7 @@
                                     min="0"
                                     max="32"
                                     value="10"
-                                    list="range-markers-4x"
+                                    data-list-step="2"
                                     class="w-[150px] sm:w-[200px]"
                                     >
                             </td>
@@ -181,22 +170,8 @@
                                     max="1"
                                     value="1"
                                     title="alpha"
-                                    list="range-markers-alpha"
                                     class="w-[100px] sm:w-[130px]"
                                     >
-                                <datalist id="range-markers-alpha">
-                                    <option>0.0</option>
-                                    <option>0.1</option>
-                                    <option>0.2</option>
-                                    <option>0.3</option>
-                                    <option>0.4</option>
-                                    <option>0.5</option>
-                                    <option>0.6</option>
-                                    <option>0.7</option>
-                                    <option>0.8</option>
-                                    <option>0.9</option>
-                                    <option>1.0</option>
-                                </datalist>
                             </td>
                         </tr>
                         <!-- <tr>
@@ -233,20 +208,8 @@
                                     min="0"
                                     max="16"
                                     value="4"
-                                    list="range-markers-2x"
                                     class="w-[150px] sm:w-[200px]"
                                     >
-                                <datalist id="range-markers-2x">
-                                    <option value="0"></option>
-                                    <option value="2"></option>
-                                    <option value="4"></option>
-                                    <option value="6"></option>
-                                    <option value="8"></option>
-                                    <option value="10"></option>
-                                    <option value="12"></option>
-                                    <option value="14"></option>
-                                    <option value="16"></option>
-                                </datalist>
                             </td>
                         </tr>
                     </table>
@@ -286,7 +249,6 @@
                                     max="1"
                                     value="1"
                                     title="alpha"
-                                    list="range-markers-alpha"
                                     class="w-[100px] sm:w-[130px]"
                                     >
                             </td>
@@ -313,7 +275,6 @@
                                     min="0"
                                     max="16"
                                     value="0"
-                                    list="range-markers-2x"
                                     class="w-[150px] sm:w-[200px]"
                                     >
                             </td>
@@ -355,7 +316,6 @@
                                     max="1"
                                     value="1"
                                     title="alpha"
-                                    list="range-markers-alpha"
                                     class="w-[100px] sm:w-[130px]"
                                     >
                             </td>
@@ -382,7 +342,35 @@
                                     min="0"
                                     max="16"
                                     value="4"
-                                    list="range-markers-2x"
+                                    class="w-[150px] sm:w-[200px]"
+                                    >
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">Border</td>
+                        </tr>
+                        <tr>
+                            <td class="pl-4">Width</td>
+                            <td>
+                                <input
+                                    type="number"
+                                    id="thumb-border-width-input"
+                                    step="1"
+                                    min="0"
+                                    max="16"
+                                    value="2"
+                                    class="border rounded px-1 bg-slate-50 text-slate-600 placeholder:text-slate-300 hover:border-blue-300 hover:placeholder:text-slate-400/60 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-300 focus:placeholder:text-slate-400/70"
+                                    >
+                                px
+                            </td>
+                            <td>
+                                <input
+                                    type="range"
+                                    id="thumb-border-width-range"
+                                    step="1"
+                                    min="0"
+                                    max="16"
+                                    value="2"
                                     class="w-[150px] sm:w-[200px]"
                                     >
                             </td>
@@ -431,6 +419,7 @@
 
 <script src="css.js"></script>
 <script src="controls.js"></script>
+<script src="utils.js"></script>
 <script>
     sl.onAllLoaded(() => {
         applyCSS();
@@ -439,6 +428,9 @@
         on(copyCssBtn, "click", () => {
             navigator.clipboard.writeText(copyCssBtn.parentElement.querySelector("pre").innerText);
         });
+    });
+    document.querySelectorAll("input[type=range]").forEach(range => {
+        addRangeTicks(range);
     });
 </script>
 
