--- a/custom-scrollbar/index.html
+++ b/custom-scrollbar/index.html
@@ -375,6 +375,26 @@
                                     >
                             </td>
                         </tr>
+                        <tr>
+                            <td class="pl-4">Style</td>
+                            <td>
+                                <select
+                                    id="thumb-border-style-select"
+                                    class="border rounded text-sm p-[0.2rem]"
+                                    >
+                                    <option>none</option>
+                                    <option>hidden</option>
+                                    <option>dotted</option>
+                                    <option>dashed</option>
+                                    <option selected>solid</option>
+                                    <option>double</option>
+                                    <option>groove</option>
+                                    <option>ridge</option>
+                                    <option>inset</option>
+                                    <option>outset</option>
+                                </select>
+                            </td>
+                        </tr>
                     </table>
                     
                 </div>
