--- a/custom-scrollbar/index.html
+++ b/custom-scrollbar/index.html
@@ -428,6 +428,19 @@
                                     >
                             </td>
                         </tr>
+                        <tr>
+                            <td>Clip</td>
+                            <td>
+                                <select
+                                    id="thumb-background-clip-select"
+                                    class="border rounded text-sm p-[0.2rem]"
+                                    >
+                                    <option>border-box</option>
+                                    <option>padding-box</option>
+                                    <option selected>content-box</option>
+                                </select>
+                            </td>
+                        </tr>
                     </table>
                     
                 </div>
