device-info: timezone offset

--- a/device-info/index.html
+++ b/device-info/index.html
@@ -35,6 +35,8 @@
 <script>
     function getInfo() {
         return {
+            "os"                        : "header",
+            "date.getTimezoneOffset()"  : new Date().getTimezoneOffset(),
             "window"                    : "header",
             "devicePixelRatio"          : devicePixelRatio,
             "innerWidth"                : innerWidth,
