--- a/html-color-names/index.html
+++ b/html-color-names/index.html
@@ -15,16 +15,17 @@
         <div class="bg-neutral-50 rounded shadow p-4">
 
             <table id="colors-table">
-                <thead>
+                <thead class="bg-neutral-200 sticky top-12 shadow">
                     <tr class="*:font-semibold *:text-left *:border-b *:px-3 *:py-1">
                         <th>#</th>
                         <th>Color</th>
                         <th>Name</th>
                         <th>RGB</th>
                         <th class="!px-8">Hex</th>
-                        <th class="!px-4">Hue °</th>
-                        <th class="!px-4" title="Saturation">Sat. %</th>
-                        <th class="!px-4" title="Lightness">Lig. %</th>
+                        <th class="!px-5">Hue °</th>
+                        <th class="!px-5" title="Saturation">Sat. %</th>
+                        <th class="!px-5" title="Lightness">Lig. %</th>
+                        <th class="!px-5 !pr-8">Luma %</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -38,14 +39,15 @@
         <tr class="hover:bg-slate-100 *:border-b *:px-3 *:py-1">
             <td></td>
             <td>
-                <div class="w-[200px] rounded h-8 bg-[rgb(var(--rgb))]"></div>
+                <div class="w-[200px] rounded h-8"></div>
             </td>
             <td></td>
             <td></td>
             <td class="font-mono uppercase !px-8"></td>
-            <td class="!px-4"></td>
-            <td class="!px-4"></td>
-            <td class="!px-4"></td>
+            <td class="!px-5"></td>
+            <td class="!px-5"></td>
+            <td class="!px-5"></td>
+            <td class="!px-5 !pr-8"></td>
         </tr>
     </template>
 
@@ -62,18 +64,20 @@
         function buildColorRow(index, name, rgb) {
             let template = document.querySelector("#color-row-template");
             let row = template.content.children[0].cloneNode(true);
+            let hsl = convertRgbToHsl(buildRgbFrom(...rgb));
+            let luma = calcLuma(rgb);
             row.children[0].textContent = index;
-            row.children[1].style.setProperty("--rgb", rgb.join());
+            row.children[1].children[0].style.backgroundColor = name;
             row.children[2].textContent = name;
             row.children[3].textContent = rgb.join(", ");
             row.children[4].textContent = convertHexToString(
                 convertRgbToHex(buildRgbFrom(...rgb)),
                 false,
             );
-            let hsl = convertRgbToHsl(buildRgbFrom(...rgb));
             row.children[5].textContent = hsl.hue;
             row.children[6].textContent = hsl.saturation;
             row.children[7].textContent = hsl.lightness;
+            row.children[8].textContent = luma;
             return row;
         }
     </script>
