apache-log-viewer

--- a/apache-log-viewer/index.html
+++ b/apache-log-viewer/index.html
@@ -36,6 +36,17 @@
             <tbody></tbody>
         </table>
         
+        <table class="text-sm" id="date-count-table">
+            <thead>
+                <tr class="*:font-semibold *:px-2 *:py-1 *:border *:text-left bg-slate-100">
+                    <th>#</th>
+                    <th>Date</th>
+                    <th>Count</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        
         <table class="text-sm" id="method-count-table">
             <thead>
                 <tr class="*:font-semibold *:px-2 *:py-1 *:border *:text-left bg-slate-100">
@@ -103,6 +114,7 @@
 <script src="lib/on.js"></script>
 <script src="lib/qs.js"></script>
 <script src="utils.js"></script>
+<script src="app.utils.js"></script>
 <script src="app.js"></script>
 
 </body>
