--- a/swipe-velocity/index.html
+++ b/swipe-velocity/index.html
@@ -22,7 +22,12 @@
 
 <div class="absolute right-4 top-4 bg-white/50 shadow p-2 rounded pointer-events-none text-sm">
     <table class="table-fixed">
-        <tr class="*:px-1">
+        <tr class="*:px-1 border-b border-b-slate-300 ">
+            <td class="min-w-[40px] font-semibold">FPS</td>
+            <td class="min-w-[15px]">:</td>
+            <td class="min-w-[60px]" id="fps">0</td>
+        </tr>
+        <tr class="*:px-1 *:pt-4">
             <td colspan="4" class="border-b border-b-slate-300 font-semibold">Position</td>
         </tr>
         <tr class="*:px-1">
